# bullet

./: Cargo.toml  ideas.txt
examples/: bullet.rs  metacam.rs  subcam.rs
src/: game.rs  main.rs  util.rs
src/game/: blocc.rs  bullet.rs  enemy.rs  level.rs  logic.rs  mob.rs  motion.rs  pack.rs  player.rs  weapon.rs
src/game/mob/: brain.rs  collide.rs  data.rs  effect.rs  enemy.rs  hp.rs  player.rs  weapon.rs
