[package]
name = "bullet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]

[dependencies.bevy]
version = "0.11.0"
default-features = false
features = [
  "dynamic_linking",
  "bevy_winit",
  "bevy_render",
  "bevy_sprite",
] 
